--- a/css/table.css
+++ b/css/table.css
@@ -4,19 +4,36 @@
 #tasklist {
   position: relative;
   margin: auto;
-  height: 60vh;
+  max-height: 60vh;
   width: 40vw;
   background-color: var(--page-bg-color);
   overflow-y: auto;
   margin-top: 1%;
   padding-right: 20px;
+  padding-top: 0px;
+  border-radius: var(--td-border-radius);
+}
+
+#tasklist::-webkit-scrollbar-thumb {
+  background-color: limegreen;
+  border: 4px solid transparent;
+  border-radius: 8px;
+  background-clip: padding-box;
+}
+
+#tasklist::-webkit-scrollbar {
+  width: 16px;
 }
 
 /* table itself + header, cells, rows, then columns styling */
 table {
-  border-collapse: collapse;
+  display: block;
+  border-collapse: separate;
+  border-spacing: 0 20px;
+  /* border-collapse: collapse; */
   table-layout: fixed; /* allows for word-wrap */
   width: 100%;         /* allows for word-wrap */
+  margin-top: -20px;
 }
 
 th,
@@ -31,6 +48,8 @@ th {
   text-align: left;
   padding: 20px 10px;
   font-size: 200%;
+
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
 }
@@ -57,6 +76,16 @@ tr:hover td {
   background-color: var(--tr-hover-color);
 }
 
+tr td:first-child, tr th:first-child {
+  border-top-left-radius: var(--td-border-radius);
+  border-bottom-left-radius: var(--td-border-radius);
+}
+
+tr td:last-child, tr th:last-child {
+  border-top-right-radius: var(--td-border-radius);
+  border-bottom-right-radius: var(--td-border-radius);
+}
+
 .col1-checkbox,
 .col3-pomos,
 .col4-delete {
@@ -78,6 +107,11 @@ tr:hover td {
   background-color: var(--header-color);
   padding-top: 10px;
   padding-bottom: 10px;
+
+  border-top-left-radius: var(--td-border-radius);
+  border-bottom-left-radius: var(--td-border-radius);
+  border-top-right-radius: var(--td-border-radius);
+  border-bottom-right-radius: var(--td-border-radius);
 }
 
 .task-name,
@@ -127,5 +161,5 @@ input[type='checkbox']:checked {
 
 tr.completedTask td {
   text-decoration: line-through;
-  background-color: rgba(211, 211, 211, 0.747);
+  background-color: var(--completed-task-color);
 }
